--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,7 @@ a:hover { text-decoration: underline; }
   padding: 75px 20px 34px;
 
   display: grid;
+  white-space: pre-line;
   gap: 14px;
   text-align: center;
 }
